--- a/.env.development
+++ b/.env.development
@@ -6,7 +6,7 @@ VITE_PUBLIC_PATH = /
 
 # Cross-domain proxy, you can configure multiple
 # Please note that no line breaks
-VITE_PROXY = [["/basic-api","http://47.108.28.6:8098"],["/upload","http://localhost:3300/upload"]]
+VITE_PROXY = [["/basic-api","http://47.108.28.6:8098"],["/flow-api","http://47.108.28.6:8098"],["/upload","http://localhost:3300/upload"]]
 # VITE_PROXY=[["/api","https://vvbin.cn/test"]]
 
 # Delete console
@@ -14,6 +14,9 @@ VITE_DROP_CONSOLE = false
 
 # Basic interface address SPA
 VITE_GLOB_API_URL=/basic-api
+
+# workflow
+VITE_GLOB_FLOW_URL=/flow-api
 
 # File upload address， optional
 VITE_GLOB_UPLOAD_URL=/upload
