--- a/.env.production
+++ b/.env.production
@@ -18,6 +18,9 @@ VITE_BUILD_COMPRESS_DELETE_ORIGIN_FILE = false
 # Basic interface address SPA
 VITE_GLOB_API_URL=/basic-api
 
+# workflow
+VITE_GLOB_FLOW_URL=/flow-api
+
 # File upload address， optional
 # It can be forwarded by nginx or write the actual address directly
 VITE_GLOB_UPLOAD_URL=/upload
