--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
+    "@antv/g2plot": "^2.4.22",
     "@iconify/iconify": "^3.1.1",
     "@logicflow/core": "^1.2.9",
     "@logicflow/extension": "^1.2.9",
@@ -85,6 +86,7 @@
     "echarts": "^5.4.2",
     "exceljs": "^4.3.0",
     "intro.js": "^7.0.1",
+    "jsencrypt": "^3.3.1",
     "lodash-es": "^4.17.21",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
